# index-dca-alert

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: index-dca-alert.yml
app/: __init__.py  config.py  schema.sql
app/jobs/: __init__.py  backfill.py  daily_run.py  feishu_smoke.py  telegram_smoke.py
app/migrations/: m20260528_multi_channel_notifications.py  m20260528_multi_channel_schema.sql  v2_migrate.py
app/providers/: akshare_csindex.py  base.py  registry.py
app/repositories/: __init__.py  sqlite.py
app/services/: __init__.py  channel_managers.py  credential.py  feishu_channel.py  notifications.py  valuation_signals.py
config/: indices.yml  rules.yml
data/: index_dca.sqlite
docs/: README.md
docs/app-foundation/: README.md  test.md
docs/app-foundation/mvp/: plan.md  todo.md
docs/data-providers/: README.md  plan.md  test.md  todo.md
docs/data-providers/mvp/: test.md  todo.md
docs/mvp-release/: README.md  plan.md  test.md  todo.md
docs/notifications/: README.md  plan.md  todo.md
docs/runtime/: README.md
docs/storage/: README.md  test.md
docs/valuation-signals/: README.md  plan.md  test.md
templates/: feishu_signal.md  telegram_signal.md
tests/: test_config.py  test_data_providers.py  test_feishu_smoke.py  test_notifications.py  test_runtime.py  test_storage.py  test_valuation_signals.py
tests/migrations/: test_m20260528_multi_channel_notifications.py  test_v2_migration.py
tests/repositories/: test_v2_repositories.py
tests/services/: test_channel_managers.py  test_credential.py  test_feishu_channel.py
(+11 files in other folders)
