[project]
name = "index-dca-alert"
version = "0.1.0"
description = "Minimal index valuation percentile and DCA reminder system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.18.60",
  "pyyaml>=6.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
